added login and signup html pages

--- a/templates/nav.html
+++ b/templates/nav.html
@@ -50,7 +50,7 @@
                     </li>
                     
                     <li>
-                        <a class="dropdown-item" href="">Login</a>
+                        <a class="dropdown-item" href="/login">Login</a>
                     </li>
                     
                 </ul>
