--- a/templates/nav.html
+++ b/templates/nav.html
@@ -50,7 +50,7 @@
                     </li>
                     
                     <li>
-                        <a class="dropdown-item" href="/login">Login</a>
+                        <a class="dropdown-item" href="{% url 'login' %}">Login</a>
                     </li>
                     
                 </ul>
