--- a/wardapp/templates/registration/signup.html
+++ b/wardapp/templates/registration/signup.html
@@ -1,5 +1,9 @@
+{% extends 'base.html' %}
+
+{% block content %}
+
 <section class="vh-100 bg-image"
-    style="background-image: url('https://mdbcdn.b-cdn.net/img/Photos/new-templates/search-box/img4.webp');">
+    style="background: linear-gradient(90deg, rgba(231,207,188,1) 2%, rgba(72,39,74,1) 100%);">
     <div class="mask d-flex align-items-center h-100 gradient-custom-3">
         <div class="container h-100">
             <div class="row d-flex justify-content-center align-items-center h-100">
@@ -32,11 +36,11 @@
 
                                 <div class="d-flex justify-content-center">
                                     <button type="button"
-                                        class="btn btn-success btn-block btn-lg gradient-custom-4 text-body">Register</button>
+                                        class="btn btn-secondary btn-block btn-lg gradient-custom-4 text-body">Register</button>
                                 </div>
 
-                                <p class="text-center text-muted mt-5 mb-0">Have already an account? <a href="#!"
-                                        class="fw-bold text-body"><u>Login here</u></a></p>
+                                <p class="text-center text-muted mt-5 mb-0">Have already an account? <a href="{% url 'login' %}"
+                                        class="fw-bold text-body">Login here</a></p>
 
                             </form>
 
@@ -47,3 +51,4 @@
         </div>
     </div>
 </section>
+{% endblock %}
