--- a/templates/nav.html
+++ b/templates/nav.html
@@ -41,18 +41,18 @@
                         alt="Black and White Portrait of a Man" loading="lazy" />
                 </a>
                 <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownMenuAvatar">
-                    
+                    {% if user.is_authenticated%}
                     <li>
-                        <a class="dropdown-item" href="">Profile</a>
+                        <a class="dropdown-item" href="{% url 'profile' %}">{{request.user}}</a>
                     </li>
                     <li>
-                        <a class="dropdown-item" href="">Logout</a>
+                        <a class="dropdown-item" href="/logout">Logout</a>
                     </li>
-                    
+                    {% else %}
                     <li>
                         <a class="dropdown-item" href="{% url 'login' %}">Login</a>
                     </li>
-                    
+                    {% endif %}
                 </ul>
             </div>
             </div>
