--- a/wardapp/templates/registration/signup.html
+++ b/wardapp/templates/registration/signup.html
@@ -34,6 +34,11 @@
                                     <label class="form-label" for="form3Example4cdg">Repeat your password</label>
                                 </div>
 
+                                <div class="mb-3">
+                                    <label for="exampleInputPassword1" class="form-label">Profile Picture</label>
+                                    <input type="file" name="image" class="form-control" id="exampleInputPassword1" />
+                                </div>
+
                                 <div class="d-flex justify-content-center">
                                     <button type="button"
                                         class="btn btn-secondary btn-block btn-lg gradient-custom-4 text-body">Register</button>
