--- a/wardapp/templates/registration/login.html
+++ b/wardapp/templates/registration/login.html
@@ -17,7 +17,9 @@
                                     <h4 class="mt-1 mb-5 pb-1">Welcome to Awwwards</h4>
                                 </div>
 
-                                <form>
+                                <form method="POST">
+                                    {% csrf_token %}
+                                    
                                     <p>Please login to your account</p>
 
                                     <div class="form-outline mb-4">
