added project html

--- a/templates/nav.html
+++ b/templates/nav.html
@@ -3,9 +3,9 @@
     <!-- Container wrapper -->
     <div class="container">
         <!-- Navbar brand -->
-        <a class="navbar-brand me-2 text-white" href="">
-            Awwwards
-        </a>
+        <h1 class="navbar-brand me-2 text-white fst-italic fw-bold" href="">
+            AWWWARDS
+        </h1>
 
         <!-- Toggle button -->
         <button class="navbar-toggler" type="button" data-mdb-toggle="collapse" data-mdb-target="#navbarButtonsExample"
@@ -18,10 +18,10 @@
             <!-- Left links -->
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link text-white" href="#">Home</a>
+                    <a class="nav-link text-white" href="/home">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white" href="#">Add Project</a>
+                    <a class="nav-link text-white" href="/project">Add Project</a>
                 </li>
             </ul>
             <!-- Left links -->
