--- a/wardapp/templates/registration/signup.html
+++ b/wardapp/templates/registration/signup.html
@@ -22,7 +22,7 @@
 
                             {% csrf_token %}
                                 <div class="form-outline mb-4">
-                                    <input type="text" id="form3Example1cg" class="form-control form-control-lg" />
+                                    <input type="text" id="form3Example1cg" name="your_name" class="form-control form-control-lg" />
                                     <label class="form-label" for="form3Example1cg">Your Name</label>
                                 </div>
 
