--- a/wardapp/templates/wardapp/profile.html
+++ b/wardapp/templates/wardapp/profile.html
@@ -7,16 +7,16 @@
         <div class="media">
             <div class="col-sm-4">
                 <div style="width: 150px; height:150px; overflow:hidden; border-radius:50%" class="img-wrapper">
-                    <img width="120%" height="120%" src="" alt="profile">
+                    <img width="120%" height="120%" src="{{ profile_picture.url }}" alt="profile">
                 </div>
             </div>
             <div class="media-body">
-                <h2 class="account-heading"></h2>
-                <p class="text-secondary"></p>
-                <p> </p>
+                <h2 class="account-heading">{{ user.username }}</h2>
+                <p class="text-secondary">{{ user.bio }}</p>
+                <p> {{ profile.created_at }} </p>
                 <hr>
 
-                <a href="">
+                <a href="/editprofile">
                     <button class="btn btn-secondary">Edit Profile</button>
                 </a>
 
