--- a/wardapp/templates/registration/login.html
+++ b/wardapp/templates/registration/login.html
@@ -17,7 +17,8 @@
                                     <h4 class="mt-1 mb-5 pb-1">Welcome to Awwwards</h4>
                                 </div>
 
-                                <form method="POST">
+                                <form method="POST" action="{% url 'login' %}">
+                                    
                                     {% csrf_token %}
                                     
                                     <p>Please login to your account</p>
