--- a/wardapp/templates/wardapp/project.html
+++ b/wardapp/templates/wardapp/project.html
@@ -6,13 +6,13 @@
 <div class="container-fluid">
     <h3 class="text-center" style="margin-top:10px;">Post Your Project</h3>
     <div class="card" style="padding:30px;">
-        <form action="{% url 'project' %}" method="post" enctype="multipart/form-data">
+        <form action="" method="post" enctype="multipart/form-data">
 
             {%csrf_token%}
 
             {{ form | crispy }}
 
-            <input type="submit" class="btn btn-success btn-block" value="Submit">
+            <input type="submit" class="btn btn-secondary btn-block" value="Submit">
         </form>
     </div>
 </div>
