--- a/wardapp/templates/registration/login.html
+++ b/wardapp/templates/registration/login.html
@@ -18,13 +18,13 @@
                                 </div>
 
                                 <form method="POST" action="{% url 'login' %}">
-                                    
+
                                     {% csrf_token %}
                                     
                                     <p>Please login to your account</p>
 
                                     <div class="form-outline mb-4">
-                                        <input type="email" id="form2Example11" class="form-control"
+                                        <input type="text" id="form2Example11" class="form-control"
                                             placeholder="Phone number or email address" />
                                         <label class="form-label" for="form2Example11">Username</label>
                                     </div>
@@ -36,7 +36,7 @@
 
                                     <div class="text-center pt-1 mb-5 pb-1">
                                         <button class="btn btn-secondary btn-block fa-lg gradient-custom-2 mb-3"
-                                            type="button">Log
+                                            type="submit" value="submit">Log
                                             in</button>
                                         <a class="text-muted" href="#!">Forgot password?</a>
                                     </div>
