--- a/wardapp/templates/registration/signup.html
+++ b/wardapp/templates/registration/signup.html
@@ -49,7 +49,7 @@
                                 </div>
 
                                 <div class="d-flex justify-content-center">
-                                    <button type="button" value="submit"
+                                    <button type="submit" value="submit"
                                         class="btn btn-secondary btn-block btn-lg gradient-custom-4 text-body">Signup</button>
                                 </div>
 
