--- a/wardapp/templates/registration/signup.html
+++ b/wardapp/templates/registration/signup.html
@@ -29,6 +29,11 @@
                                 </div>
 
                                 <div class="form-outline mb-4">
+                                    <input type="text" id="form3Example1cg" name="username" class="form-control form-control-lg" />
+                                    <label class="form-label" for="form3Example1cg">Username</label>
+                                </div>
+
+                                <div class="form-outline mb-4">
                                     <input type="email" id="form3Example3cg" name="email" class="form-control form-control-lg" />
                                     <label class="form-label" for="form3Example3cg">Your Email</label>
                                 </div>
