--- a/wardapp/templates/wardapp/profile.html
+++ b/wardapp/templates/wardapp/profile.html
@@ -12,7 +12,7 @@
             </div>
             <div class="media-body">
                 <h2 class="account-heading">{{ user.username }}</h2>
-                <p class="text-secondary">{{ user.bio }}</p>
+                <p class="text-secondary">{{ user.email }}</p>
                 <p> {{ profile.created_at }} </p>
                 <hr>
 
