--- a/wardapp/templates/wardapp/project.html
+++ b/wardapp/templates/wardapp/project.html
@@ -3,10 +3,11 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
-<div class="container-fluid">
-    <h3 class="text-center" style="margin-top:10px;">Post Your Project</h3>
+
+<div class="container">
+    <h3 class="text-center" style="margin-top:10px;">Post your project</h3>
     <div class="card" style="padding:30px;">
-        <form action="" method="post" enctype="multipart/form-data">
+        <form action="" method="POST" enctype="multipart/form-data">
 
             {%csrf_token%}
 
@@ -16,6 +17,5 @@
         </form>
     </div>
 </div>
-
 
 {% endblock %}
