--- a/wardapp/templates/wardapp/profile.html
+++ b/wardapp/templates/wardapp/profile.html
@@ -7,13 +7,13 @@
         <div class="media">
             <div class="col-sm-4">
                 <div style="width: 150px; height:150px; overflow:hidden; border-radius:50%" class="img-wrapper">
-                    <img width="120%" height="120%" src="{{ profile_picture.url }}" alt="profile">
+                    <img width="120%" height="120%" src="{{ user.profile.profile_picture.url }}" alt="profile">
                 </div>
             </div>
             <div class="media-body">
                 <h2 class="account-heading">{{ user.username }}</h2>
-                <p class="text-secondary">{{ user.email }}</p>
-                <p> {{ profile.created_at }} </p>
+                <p class="text-secondary">{{ user.bio }}</p>
+                <p> {{ user.created_at }} </p>
                 <hr>
 
                 <a href="/editprofile">
