--- a/wardapp/templates/wardapp/review.html
+++ b/wardapp/templates/wardapp/review.html
@@ -3,6 +3,53 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
+<div class="row">
 
+    <div class="col s12 m12">
+        <div class="card horizontal">
+            <div class="card-image">
+                <img src="">
+            </div>
+            <div class="card-stacked">
+                <div class="card-content">
+                    <span class="card-title"><b></b></span>
+                    <span></span>
+                    <br>
+                    <p></p>
+                    <br>
+                    <div class="divider"></div>
+                    <br>
+                    <form method="POST" action="" role="form" class="col s12">
+                        {% csrf_token %}
+                        <div class="input-field col s12">
+                            {{ form.rate }}
+                        </div>
+                        <div class="input-field col s12">
+                            {{ form.text }}
+                            <label for="textarea1">Opinion</label>
+                        </div>
+
+                        <button type="submit" name="action" class="waves-effect waves-light btn"><i
+                                class="material-icons left">star</i>Rate</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-6">
+        <h3>Reviews</h3>
+        <div class="row">
+            {%for x in reviews%}
+            <p class="text-secondary pr-3">{{user.username}}</p>
+            <p class="pr-2"> {{x.text}}</p>
+            <p class="pr-3">Design : {{x.design}}</p>
+            <p class="pr-2"> Usability: {{x.usability}}</p>
+            <p class="pr-2"> Content: {{x.content}}</p>
+            {%endfor%}
+        </div>
+
+    </div>
+
+</div>
 
 {% endblock %}
