removed review from nav

--- a/wardapp/templates/wardapp/index.html
+++ b/wardapp/templates/wardapp/index.html
@@ -15,7 +15,7 @@
                 </div>
                 <div class="card-body">
                     <h5 class="">{{x.title}}</h5>
-                    <a href="project/{{x.id}}">Readmore</a>
+                    <a href="project/{{x.id}}">Read more here..</a>
                 </div>
             </div>
         </div>
