--- a/templates/nav.html
+++ b/templates/nav.html
@@ -21,7 +21,7 @@
                     <a class="nav-link text-white" href="/home">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white" href="/project">Add Project</a>
+                    <a class="nav-link text-white" href="/addproject">Add Project</a>
                 </li>
             </ul>
             <!-- Left links -->
