--- a/wardapp/templates/registration/login.html
+++ b/wardapp/templates/registration/login.html
@@ -7,53 +7,64 @@
         <div class="row d-flex justify-content-center align-items-center h-100">
             <div class="col-xl-10">
                 <div class="card rounded-3 text-black">
+    
                     <div class="row g-0">
                         <div class="col-lg-6">
                             <div class="card-body p-md-5 mx-md-4">
-
+    
                                 <div class="text-center">
                                     <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/lotus.webp"
                                         style="width: 185px;" alt="logo">
                                     <h4 class="mt-1 mb-5 pb-1">Welcome to Awwwards</h4>
                                 </div>
-
-                                <form method="POST" action="{% url 'login' %}">
-
+    
+                                <form method="POST" action="">
+                                    {% if messages %} {% for i in messages %}
+                                    <div class="alert alert-success alert-dismissable fade show" role="alert">
+                                        {{ i.messages }}
+                                        <button type="button" class="btn-close" aria-label="Close"
+                                            data-bs-dismiss="alert"></button>
+                                    </div>
+                                    {% endfor %} {% endif %}
+    
                                     {% csrf_token %}
-                                    
+    
                                     <p>Please login to your account</p>
-
+    
                                     <div class="form-outline mb-4">
                                         <input type="text" id="form2Example11" class="form-control"
                                             placeholder="Phone number or email address" />
                                         <label class="form-label" for="form2Example11">Username</label>
                                     </div>
-
+    
                                     <div class="form-outline mb-4">
                                         <input type="password" id="form2Example22" class="form-control" />
                                         <label class="form-label" for="form2Example22">Password</label>
                                     </div>
-
+    
                                     <div class="text-center pt-1 mb-5 pb-1">
-                                        <button class="btn btn-secondary btn-block fa-lg gradient-custom-2 mb-3"
+                                        <input class="btn btn-secondary btn-block fa-lg gradient-custom-2 mb-3"
                                             type="submit" value="submit">Log
-                                            in</button>
+                                            in</input>
                                         <a class="text-muted" href="#!">Forgot password?</a>
                                     </div>
-
+    
                                     <div class="d-flex align-items-center justify-content-center pb-4">
                                         <p class="mb-0 me-2">Don't have an account?</p>
-                                        <button type="button" class="btn btn-outline-dark"> <a href="/signup"> Create new</a></button>
+                                        <button type="button" class="btn btn-outline-dark"> <a href="/signup"> Create
+                                                new</a></button>
                                     </div>
-
+    
                                 </form>
-
+    
                             </div>
                         </div>
-                        <div class="col-lg-6 d-flex align-items-center" style="background: linear-gradient(90deg, rgba(72,39,74,1) 1%, rgba(231,207,188,1) 91%);">
+                        <div class="col-lg-6 d-flex align-items-center"
+                            style="background: linear-gradient(90deg, rgba(72,39,74,1) 1%, rgba(231,207,188,1) 91%);">
                             <div class="text-black px-3 py-4 p-md-5 mx-md-4">
                                 <h2 class="mb-4">We are more than just a web application.</h2>
-                                <p class="small mb-0">Awwwards is an application that allows a user to post a project he/she has created and get it reviewed by his/her peers.</p>
+                                <p class="small mb-0">Awwwards is an application that allows a user to post a project he/she
+                                    has created and get it reviewed by his/her peers.</p>
                             </div>
                         </div>
                     </div>
@@ -61,5 +72,5 @@
             </div>
         </div>
     </div>
-</section>
-{% endblock %}
+    </section>
+    {% endblock %}
