--- a/wardapp/templates/wardapp/profile.html
+++ b/wardapp/templates/wardapp/profile.html
@@ -12,8 +12,8 @@
             </div>
             <div class="media-body">
                 <h2 class="account-heading">{{ user.username }}</h2>
-                <p class="text-secondary">{{ user.bio }}</p>
-                <p> {{ user.created_at }} </p>
+                <p class="text-secondary">{{ profile.bio }}</p>
+                <p> {{ profile.created_at }} </p>
                 <hr>
 
                 <a href="/editprofile">
