--- a/wardapp/templates/wardapp/review.html
+++ b/wardapp/templates/wardapp/review.html
@@ -9,7 +9,7 @@
         <div class="col s12 m12">
             <div class="card horizontal">
                 <div class="card-image">
-                    <img src="">
+                    <img src="{{x.image.url}}">
                 </div>
                 <div class="card-stacked">
                     <div class="card-content">
