--- a/wardapp/templates/registration/signup.html
+++ b/wardapp/templates/registration/signup.html
@@ -15,19 +15,8 @@
                             <h2 class="text-uppercase text-center mb-5">Create an account</h2>
 
                             <form method="POST" enctype="multipart/form-data"  action="{% url 'signup' %}">
-                                {% if messages %} {% for i in messages %}
-                                <div class="alert alert-success alert-dismissable fade show" role="alert">
-                                    {{ i.messages }}
-                                    <button type="button" class="btn-close" aria-label="Close" data-bs-dismiss="alert"></button>
-                                </div>
-                                {% endfor %} {% endif %}
-
+                            
                             {% csrf_token %}
-                                <div class="form-outline mb-4">
-                                    <input type="text" id="form3Example1cg" name="your_name" class="form-control form-control-lg" />
-                                    <label class="form-label" for="form3Example1cg">Your Name</label>
-                                </div>
-
                                 <div class="form-outline mb-4">
                                     <input type="text" id="form3Example1cg" name="username" class="form-control form-control-lg" />
                                     <label class="form-label" for="form3Example1cg">Username</label>
@@ -51,6 +40,11 @@
                                 <div class="mb-3">
                                     <label for="exampleInputPassword1" class="form-label">Profile Picture</label>
                                     <input type="file" name="image" class="form-control" id="exampleInputPassword1" />
+                                </div>
+
+                                <div class="form-outline mb-4">
+                                    <input type="text" id="form3Example1cg" name="username" class="form-control form-control-lg" />
+                                    <label class="form-label" for="form3Example1cg">Bio here</label>
                                 </div>
 
                                 <div class="d-flex justify-content-center">
