--- a/wardapp/templates/wardapp/review.html
+++ b/wardapp/templates/wardapp/review.html
@@ -4,50 +4,43 @@
 
 {% block content %}
 <div class="container">
-    <div class="row">
+    <div class="row  p-5 mt-2">
 
-        <div class="col s12 m12">
-            <div class="card horizontal">
-                <div class="card-image">
-                    <img src="{{x.image.url}}">
+        <div class="col-md-6">
+            <div class="panel panel-default">
+                <div class="card p-3">
+
+                    <form class="form" action="" method="post" novalidate>
+                        {% csrf_token %}
+
+                        {{ form | crispy }}
+
+                        <div class="row pl-5">
+                            <button type="submit" class="btn btn-secondary"
+                                style="margin-top:14px; margin-left:-10px">Review</button>
+                        </div>
+
+
+                    </form>
+
                 </div>
-                <div class="card-stacked">
-                    <div class="card-content">
-                        <span class="card-title"><b></b></span>
-                        <span></span>
-                        <br>
-                        <p></p>
-                        <br>
-                        <div class="divider"></div>
-                        <br>
-                        <form method="POST" action="" role="form" class="col s12">
-                            {% csrf_token %}
 
-                            {{ form | crispy}}
-
-                            <button type="submit" name="action" class="waves-effect waves-light btn"><i
-                                    class="material-icons left">star</i>Rate</button>
-                        </form>
-                    </div>
-                </div>
             </div>
         </div>
         <div class="col-md-6">
             <h3>Reviews</h3>
             <div class="row">
-                {%for x in reviews%}
+                {%for r in reviews%}
                 <p class="text-secondary pr-3">{{user.username}}</p>
-                <p class="pr-2"> {{x.text}}</p>
-                <p class="pr-3">Design : {{x.design}}</p>
-                <p class="pr-2"> Usability: {{x.usability}}</p>
-                <p class="pr-2"> Content: {{x.content}}</p>
+                <p class="pr-2"> {{r.text}}</p>
+                <p class="pr-3">Design : {{r.design}}</p>
+                <p class="pr-2"> Usability: {{r.usability}}</p>
+                <p class="pr-2"> Content: {{r.content}}</p>
                 {%endfor%}
             </div>
 
         </div>
-
     </div>
-
 </div>
 
 {% endblock %}
