--- a/wardapp/templates/wardapp/review.html
+++ b/wardapp/templates/wardapp/review.html
@@ -2,6 +2,8 @@
 
 {% load crispy_forms_tags %}
 
+{% load ratings %}
+
 {% block content %}
 <div class="container mt-5">
     <div class="row">
@@ -24,7 +26,7 @@
                 <!-- Text -->
                 <p class="card-text">{{project.description}}
                 </p>
-                <a href="{{project.projecturl}}">
+                <a href="{{project.projecturl}}" target="_blank">
                     <button class="btn btn-secondary">Check out</button>
                 </a>
                 <h5 class="text-secondary">By: {{project.user}}</h5>
@@ -34,24 +36,24 @@
             </div>
         </div>
     </div>
-    <iv class="ratings">
-        <h3 class="pt-3 h2">Rate</h3>
+    <div class="rating-wrapper ">
+        <h2 class="pt-3 fw-bold">Rate</h2>
         <div class="row">
             <div class="col-sm">
                 <h4>Usability</h4>
-                {{project.review}}
+                {% ratings project %}
             </div>
             <div class="col-sm">
                 <h4>Design</h4>
-                {{project.review}}
+                {% ratings project %}
             </div>
             <div class="col-sm">
                 <h4>Content</h4>
-                {{project.review}}
+                {% ratings project %}
             </div>
         </div>
 
-</div>
+    </div>
 <div>
 
 {% endblock %}
