changed rate choices in models

--- a/wardapp/templates/wardapp/review.html
+++ b/wardapp/templates/wardapp/review.html
@@ -39,7 +39,7 @@
     <div class="rating-wrapper ">
         <h2 class="pt-3 fw-bold">Rate</h2>
         <div class="row">
-            <div class="col-sm">
+            <div class="col">
                 <h4>Usability</h4>
                 {% ratings project %}
             </div>
