--- a/wardapp/templates/wardapp/index.html
+++ b/wardapp/templates/wardapp/index.html
@@ -21,7 +21,7 @@
                     
                 </div>
                 <div class="card-footer">
-                    {{user.username}}
+                    {{project.user}}
                     {% if user == project.user %}
                     <form method="POST">
                         {% csrf_token %}
