--- a/wardapp/templates/wardapp/addproject.html
+++ b/wardapp/templates/wardapp/addproject.html
@@ -5,7 +5,7 @@
 {% block content %}
 
 <div class="container">
-    <h3 class="text-center" style="margin-top:10px;">Post your project</h3>
+    <h3 class="text-center fw-bold" >Post your project</h3>
     <div class="card" style="padding:30px;">
         <form action="" method="POST" enctype="multipart/form-data">
 
