rendered bio to signup page

--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,5 +1,5 @@
 <!-- Navbar -->
-<nav class="navbar navbar-expand-lg" style="background-color: #48274a;">
+<nav class="navbar navbar-expand-lg p-3" style="background-color: #48274a;">
     <!-- Container wrapper -->
     <div class="container">
         <!-- Navbar brand -->
