--- a/wardapp/templates/registration/signup.html
+++ b/wardapp/templates/registration/signup.html
@@ -43,7 +43,7 @@
                                 </div>
 
                                 <div class="form-outline mb-4">
-                                    <input type="text" id="form3Example1cg" name="username" class="form-control form-control-lg" />
+                                    <input type="text" id="form3Example1cg" name="bio" class="form-control form-control-lg" />
                                     <label class="form-label" for="form3Example1cg">Bio here</label>
                                 </div>
 
